fix: use lowfootprint option to prevent deadlocks